--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/foundation.css">
+  <link rel="stylesheet" href="assets/icomoon.css">
+  <script src="assets/jquery.js"></script>
+  <script src="assets/foundation.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
